--- a/elasticsearch/docker-compose.yml
+++ b/elasticsearch/docker-compose.yml
@@ -1,36 +1,43 @@
-version: '3'
+version: '3.0'
 services:
-     es-master:
-       image:  elasticsearch:6.4.3
-       container_name: es-master
-       restart: always
-       volumes:
-         - ./master/data:/usr/share/elasticsearch/data:rw
-         - ./master/conf/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-         - ./master/logs:/user/share/elasticsearch/logs:rw
-       ports:
-         - "9200:9200"
-         - "9300:9300"
+  es01:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.1
+    container_name: es01
+    environment:
+      - node.name=es01
+      - discovery.seed_hosts=es02
+      - cluster.initial_master_nodes=es01,es02
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - ./dbData/es01/:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - esnet
+  es02:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.1
+    container_name: es02
+    environment:
+      - node.name=es02
+      - discovery.seed_hosts=es01
+      - cluster.initial_master_nodes=es01,es02
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - ./dbData/es02/:/usr/share/elasticsearch/data
+    networks:
+      - esnet
 
-    #  es-node1:
-    #    image:  elasticsearch:6.4.3
-    #    container_name: es-node1
-    #    restart: always
-    #    volumes:
-    #      - ./node1/data:/usr/share/elasticsearch/data:rw
-    #      - ./node1/conf/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-    #      - ./node1/logs:/user/share/elasticsearch/logs:rw
-    #  es-node2:
-    #    image:  elasticsearch:6.4.3
-    #    container_name: es-node2
-    #    restart: always
-    #    volumes:
-    #      - ./node2/data:/usr/share/elasticsearch/data:rw
-    #      - ./node2/conf/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-    #      - ./node2/logs:/user/share/elasticsearch/logs:rw
-     es-head:
-       image: tobias74/elasticsearch-head:6
-       container_name: es-head
-       restart: always
-       ports:
-       - "9100:9100"
+networks:
+  esnet:
