--- a/elasticsearch/docker-compose.yml
+++ b/elasticsearch/docker-compose.yml
@@ -39,5 +39,14 @@ services:
     networks:
       - esnet
 
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.3.1
+    ports:
+      - "5601:5601"
+    environment:
+      ELASTICSEARCH_HOSTS: http://es01:9200
+    networks:
+      - esnet
+
 networks:
   esnet:
